# rp2040-rubber-ducky-storage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pico_sdk_import.cmake
examples/: advanced_ducky.txt  example_ducky.txt
src/: diskio.c  ffconf.h  main.c  sd_card.c  sd_card.h  tusb_config.h
